# pstl

./: CMakeLists.txt
include/pstl/internal/: algorithm_fwd.h  algorithm_impl.h  execution_impl.h  glue_algorithm_impl.h  glue_memory_impl.h  glue_numeric_impl.h  memory_impl.h  numeric_fwd.h  numeric_impl.h  parallel_backend_tbb.h  parallel_backend_utils.h  parallel_impl.h  unseq_backend_simd.h  utils.h
test/: CMakeLists.txt
test/std/algorithms/alg.modifying.operations/: replace.pass.cpp
test/std/algorithms/alg.modifying.operations/alg.copy/: CMakeLists.txt
test/std/algorithms/alg.modifying.operations/alg.partitions/: partition_copy.pass.cpp
test/std/algorithms/alg.modifying.operations/alg.reverse/: CMakeLists.txt
test/std/algorithms/alg.nonmodifying/: CMakeLists.txt
test/std/algorithms/alg.sorting/alg.lex.comparison/: CMakeLists.txt
test/std/algorithms/alg.sorting/alg.min.max/: CMakeLists.txt
test/std/algorithms/alg.sorting/alg.set.operations/: CMakeLists.txt  includes.pass.cpp  set.pass.cpp
test/std/numerics/numeric.ops/: CMakeLists.txt
test/std/utilities/memory/: CMakeLists.txt
testsuite/std/: CMakeLists.txt
testsuite/std/algorithms/: CMakeLists.txt
testsuite/std/algorithms/alg.merge/: CMakeLists.txt
testsuite/std/algorithms/alg.modifying.operations/: CMakeLists.txt
testsuite/std/algorithms/alg.modifying.operations/alg.partitions/: CMakeLists.txt
testsuite/std/algorithms/alg.sorting/: CMakeLists.txt  partial_sort.pass.cpp
testsuite/std/algorithms/alg.sorting/alg.heap.operations/: CMakeLists.txt
testsuite/std/numerics/: CMakeLists.txt
(+1 files in other folders)
